[project]
name = "tiny-grpo"
version = "0.1.0"
description = "Minimal GRPO and DGPO implementation for LLM reinforcement learning"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "flash-attn>=2.5.0",
    "wandb>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
