[project]
name = "tiny-grpo"
version = "0.1.0"
description = "Minimal GRPO and DGPO implementation for LLM reinforcement learning"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.5.1",
    "transformers>=4.40.0",
    "accelerate>=0.28.0",
    "wandb>=0.16.0",
    "datasets>=2.18.0",
]

[project.optional-dependencies]
flash = [
    "flash-attn>=2.5.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
